// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected at large width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-2 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-6"
                    >
                      <span
                        class="makeStyles-statusDot-11 makeStyles-staging-9"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-12"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-1"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-12"
                      title="20/11/2020, 19:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-5"
                    >
                      Experiment with things. Change stuff. Profit.
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-5"
                    >
                      test_a11n
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-5 MuiTypography-colorPrimary"
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-15 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    metric_1
                    <br />
                    <div
                      aria-disabled="true"
                      class="MuiChip-root makeStyles-primaryChip-19 MuiChip-outlined Mui-disabled"
                    >
                      <span
                        class="MuiChip-label"
                      >
                        Primary
                      </span>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    metric_3
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-14"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        >
          <h3
            class="MuiTypography-root makeStyles-title-20 MuiTypography-h3 MuiTypography-colorTextPrimary"
          >
            Audience
          </h3>
        </div>
        <table
          class="MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Platform
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                calypso
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                User Type
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                New users only
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Variations
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Name
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Percent
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        <span
                          class="makeStyles-variation-22"
                        >
                          control
                        </span>
                        <span
                          class="makeStyles-default-21 makeStyles-root-24"
                        >
                          Default
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        60
                        %
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        <span
                          class="makeStyles-variation-22"
                        >
                          test
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        40
                        %
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Segments
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Locales
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        segment_1
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Countries
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        segment_2
                        <span
                          class="makeStyles-excluded-25 makeStyles-root-24"
                        >
                          Excluded
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Exposure Events
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <div
                  class="makeStyles-eventList-28"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    <span
                      class="makeStyles-eventName-27"
                    >
                      eventName
                    </span>
                    <span
                      class="makeStyles-entry-26"
                    >
                      additionalProp1
                      : 
                      prop1Value
                    </span>
                    <span
                      class="makeStyles-entry-26"
                    >
                      additionalProp2
                      : 
                      prop2Value
                    </span>
                    <span
                      class="makeStyles-entry-26"
                    >
                      additionalProp3
                      : 
                      prop3Value
                    </span>
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected at small width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-30 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-34"
                    >
                      <span
                        class="makeStyles-statusDot-39 makeStyles-staging-37"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-40"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-29"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-40"
                      title="20/11/2020, 19:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-33"
                    >
                      Experiment with things. Change stuff. Profit.
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-33"
                    >
                      test_a11n
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-33 MuiTypography-colorPrimary"
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-48 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-50"
                            >
                              control
                            </span>
                            <span
                              class="makeStyles-default-49 makeStyles-root-52"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-50"
                            >
                              test
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-53 makeStyles-root-52"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-56"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        <span
                          class="makeStyles-eventName-55"
                        >
                          eventName
                        </span>
                        <span
                          class="makeStyles-entry-54"
                        >
                          additionalProp1
                          : 
                          prop1Value
                        </span>
                        <span
                          class="makeStyles-entry-54"
                        >
                          additionalProp2
                          : 
                          prop2Value
                        </span>
                        <span
                          class="makeStyles-entry-54"
                        >
                          additionalProp3
                          : 
                          prop3Value
                        </span>
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-43 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    metric_1
                    <br />
                    <div
                      aria-disabled="true"
                      class="MuiChip-root makeStyles-primaryChip-47 MuiChip-outlined Mui-disabled"
                    >
                      <span
                        class="MuiChip-label"
                      >
                        Primary
                      </span>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    metric_3
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-42"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected with conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-58 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title=""
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-62"
                    >
                      <span
                        class="makeStyles-statusDot-67 makeStyles-disabled-66"
                      />
                       
                      disabled
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-68"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-57"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-68"
                      title="20/11/2020, 19:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-61"
                    >
                      Experiment with things. Change stuff. Profit.
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-61"
                    >
                      test_a11n
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-61 MuiTypography-colorPrimary"
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-78 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-80"
                            >
                              control
                            </span>
                            <span
                              class="makeStyles-default-79 makeStyles-root-82"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-80"
                            >
                              test
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-83 makeStyles-root-82"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-86"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        <span
                          class="makeStyles-eventName-85"
                        >
                          eventName
                        </span>
                        <span
                          class="makeStyles-entry-84"
                        >
                          additionalProp1
                          : 
                          prop1Value
                        </span>
                        <span
                          class="makeStyles-entry-84"
                        >
                          additionalProp2
                          : 
                          prop2Value
                        </span>
                        <span
                          class="makeStyles-entry-84"
                        >
                          additionalProp3
                          : 
                          prop3Value
                        </span>
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-71 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title=""
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    metric_1
                    <br />
                    <div
                      aria-disabled="true"
                      class="MuiChip-root makeStyles-primaryChip-75 MuiChip-outlined Mui-disabled"
                    >
                      <span
                        class="MuiChip-label"
                      >
                        Primary
                      </span>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    metric_3
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-76 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Conclusions
              </h3>
              <button
                aria-label="Edit Conclusion"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Reason the experiment ended
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Ran its course.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Conclusion URL
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://betterexperiments.wordpress.com/experiment_1/conclusion"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://betterexperiments.wordpress.com/experiment_1/conclusion
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Deployed variation
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected without conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-88 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-92"
                    >
                      <span
                        class="makeStyles-statusDot-97 makeStyles-staging-95"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-98"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-87"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-98"
                      title="20/11/2020, 19:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-91"
                    >
                      Experiment with things. Change stuff. Profit.
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-91"
                    >
                      test_a11n
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-91 MuiTypography-colorPrimary"
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-106 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-108"
                            >
                              control
                            </span>
                            <span
                              class="makeStyles-default-107 makeStyles-root-110"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            <span
                              class="makeStyles-variation-108"
                            >
                              test
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-111 makeStyles-root-110"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        <span
                          class="makeStyles-eventName-113"
                        >
                          eventName
                        </span>
                        <span
                          class="makeStyles-entry-112"
                        >
                          additionalProp1
                          : 
                          prop1Value
                        </span>
                        <span
                          class="makeStyles-entry-112"
                        >
                          additionalProp2
                          : 
                          prop2Value
                        </span>
                        <span
                          class="makeStyles-entry-112"
                        >
                          additionalProp3
                          : 
                          prop3Value
                        </span>
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-101 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    metric_1
                    <br />
                    <div
                      aria-disabled="true"
                      class="MuiChip-root makeStyles-primaryChip-105 MuiChip-outlined Mui-disabled"
                    >
                      <span
                        class="MuiChip-label"
                      >
                        Primary
                      </span>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    metric_2
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    metric_3
                    <br />
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
